--- a/assets/style/style.css
+++ b/assets/style/style.css
@@ -33,7 +33,8 @@ body {
      height: 70px;
      max-width: 100vw;
      justify-content: space-between;
-     /* overflow-x: hidden; */
+     
+ 
  }
 
  .navbar__img {
@@ -46,9 +47,8 @@ body {
      flex-direction: row;
      align-self: center;
      justify-content: space-between;
-     width: 445px;
-     /* padding-right: 150px; */
-     margin-right: 150px;
+     width: 450px;
+    margin-right: 139px;
  }
 
  .navbar__title a {
@@ -86,25 +86,30 @@ body {
     box-sizing: border-box;
     background: no-repeat url(../images/Header_Panel.png);
     background-size: cover;
-    height: 711px;
-    padding: 180px 0 0 0;
-    
-    
+    height: 642px;
+    padding: 110px 0 0 0;
+    background-position-y: center;
  }
 .wrappers {
     display: flex;
     flex-direction: row;
     justify-content: space-between;
-    margin: 0 150px 0 150px;
+    margin: 0 147px 0 150px;
 }
-
- .header__block {
+.header .wrappers {
+margin: 0 149px 0 150px;
+}
+/* .header .wrappers .one {
+    padding: 0;
+} */
+ .header .header__block .one, .two {
      height: min-content;
      max-width: 360px;
      width: 50%;
  }
  .header .one {
     min-width: 420px;
+    max-width: 520px;
  }
 
  .header__block_signap {
@@ -118,11 +123,12 @@ body {
     font-weight: bold;
     line-height: 1.2;
     text-align: center;
-    padding: 15px 0 15px 0;
+    padding: 15px 7px 15px 0;
     background-color: #f5f5f5;
     border-top-left-radius: 4px;
-    border-top-right-radius: 4px
-}
+    border-top-right-radius: 4px;
+    padding-right: 4px;
+    }
 .free {
     /* оранжевый цвет для текста фри в титле сигнапа */
     color: #fca667
@@ -138,7 +144,11 @@ body {
      color: rgb(255, 255, 255);
      line-height: 1.2;
      text-align: left;
-     margin-top: 22px
+     margin-top: 22px;
+     margin-left: -3px;
+ }
+ .header form .button_download {
+    margin-left: 1px;
  }
 
  .header__block_divider {
@@ -173,9 +183,6 @@ body {
      background-color: rgba(255, 255, 255, 0.1);
      transition-duration: 0.4s
  }
-
-
-
  input {
      box-sizing: border-box;
      border: none;
@@ -200,7 +207,7 @@ body {
      padding: 4px 0 32px
  }
 
- .header__block_signap_btn {
+ .header .header__block_signap_btn {
      /* кнопка для старта сигнапа */
      border: none;
      font-size: 15px;
@@ -212,8 +219,8 @@ body {
      padding: 0px;
      outline: none;
      border-bottom-left-radius: 4px;
-     border-bottom-right-radius: 4px
- }
+     border-bottom-right-radius: 4px;
+  }
 
  .header__block_signap_btn:hover {
      text-decoration: none;
@@ -224,12 +231,14 @@ body {
  .brand_bar {
      /* третьи блок с иконками брендов */
      box-sizing: border-box;
-     height: 105px;
+     height: 104px;
      padding: 18px 0px 20px 0px;
      box-shadow: 0 0 5px rgba(0, 0, 0, 0.5);
      position: relative;
  }
-
+ .brand_bar .wrappers {
+    margin: 0 130px 0 153px;
+ }
 
  .brand_box1 {
      width: 364px;
@@ -241,6 +250,9 @@ body {
      color: rgb(51, 51, 51);
      font-weight: bold;
      margin: 0;
+     margin-bottom: 3px;
+    margin-top: -2px;
+    margin-left: -2px;
  }
 
  .brand_box1 .brand_box_text {
@@ -250,8 +262,9 @@ body {
  }
 
  .brand_box2 {
-     align-self: center;
-     width: 50%;
+    align-self: center;
+    width: 636px;
+    margin-right: 37px;
  }
 
  .a,
@@ -295,11 +308,23 @@ body {
     box-sizing: border-box;
     background-color: #f5f5f5;
     height: 595px;
-    padding-top: 150px;
-    
+    padding-top: 132px;
  }
+ .features .wrappers {
+    margin: 0px 147px 0 142px;
+ }
+ .features .wrapper_tab_1 {
+    margin-top: 20px;
+ }
+ .features .wrapper_tab_1 .title {
+     text-align: start;
+ }
+ .features .wrapper_tab_1 .text p{
+    font-size: 13px;
+    line-height: 1.429;
+}
 
- .features .first {
+.features .first {
      display: flex;
      flex-direction: row;
      height: 334px;
@@ -318,13 +343,13 @@ body {
      font-weight: bold;
      line-height: 1.333;
      box-shadow: 0px 3px 6px rgba(0, 0, 0, 0.5);
-     margin: 1px
+
  }
 
  .features .container {
      margin-left: 100px;
-     max-width: 474px;
-     min-width: 335px;
+     max-width: 473px;
+     min-width: 260px;
  }
 
  .title p {
@@ -357,7 +382,8 @@ body {
      padding: 0px;
      outline: none;
      border-radius: 4px;
-     box-shadow: 0px 3px 6px rgba(0, 0, 0, 0.5)
+     box-shadow: 0px 3px 6px rgba(0, 0, 0, 0.5);
+     margin-top: 16px;
  }
 
  .button_download_features:hover {
@@ -372,14 +398,16 @@ body {
 
  .wrappers .second img {
     max-width: 100%;
-    min-width: 200px;
+    min-width: 150px;
 }
  .our_process {
     height: 592px;
     background-color: white;
+    margin-bottom: -100px;
  }
  .our_process .wrappers {
      display: block;
+     margin: 0 140px 0 141px;
  }
 
  .container .title {
@@ -395,17 +423,15 @@ body {
      display: flex;
      border: 2px solid #ff8b38;
      border-radius: 70px;
-     width: 70px;
-     height: 70px
+     width: 67px;
+     height: 67px
  }
 
  .container_box {
     max-width:355px
  }
-
- .title_text,
- .box_text {
-     font-size: 15px;
+ .title_text, .box_text {
+     font-size: 14px;
      color: rgb(134, 135, 139);
      line-height: 1.429;
      text-align: center
@@ -422,11 +448,15 @@ body {
      font-size: 20px;
      color: rgb(51, 51, 51);
      font-weight: bold;
-     line-height: 1.2
+     line-height: 1.2;
+     padding-top: 5px;
  }
+ .wrapper_box .box_text {
+    padding-top: 2px;
+}
 
  .our_process .container {
-    margin: 110px 0 80px 0;
+    margin: 100px 0 78px 0;
     min-width: 400px;
  }
 
@@ -437,12 +467,11 @@ body {
  }
 .pricing .wrappers {
     display: block;
-
+    margin: 0 137px 0 138px;
 }
  .pricing .container {
      padding-top: 100px;
-     margin: 0px auto 80px;
-     min-width: 400px;
+      min-width: 400px;
  }
  .box_text p {
     margin: 0px;
@@ -454,12 +483,20 @@ body {
      justify-content: space-between;
      align-items: flex-end;
  }
+.pricing .box {
+    max-width: 359px;
+    width: 100%;
+}
+.pricing .wrapper_box {
+    margin-top: 56px;
+}
+
 
  .wrapper_box li {
      height: 40px;
      text-align: center;
      margin-bottom: 1px;
-     padding-top: 10px;
+     padding-top: 8px;
      box-sizing: border-box;
      width: 100%;
      max-width: 343px;
@@ -470,30 +507,39 @@ body {
     align-items: center;
  }
 
- .basic {
+ .box ul .basic {
      font-size: 20px;
      color: rgb(255, 255, 255);
      font-weight: bold;
-     line-height: 1.2;
-     background-color: #333333
+     background-color: #333333;
+     height: 60px;
+     padding-top: 16px;
+     margin: 0px;
  }
 
  .box ul .price {
-     font-size: 80px;
+     font-size: 91px;
      color: rgb(255, 255, 255);
      font-weight: bold;
      line-height: 0.686;
      text-align: center;
      background-color: #333333;
-     height: 100px
+     height: 100px;
+     padding-top: 20px;
+     padding-left: 6px;
+ }
+ .box ul span {
+     font-size: 31px;
  }
 
- .text_comm {
+ .box ul .text_comm {
      font-size: 14px;
      color: rgba(255, 255, 255, 0.502);
      line-height: 1.714;
-     text-align: center;
-     background-color: #333333
+     background-color: #333333;
+     height: 55px;
+     padding-top: 11px;
+     padding-right: 4px;
  }
 
  .texte_gray {
@@ -513,25 +559,20 @@ body {
      transform: scale(1.03)
  }
  
-.wrapper_box .two,.one,.three {
-    padding: 0 10px 0px 10px;
-    width: 31.183%;
-}
-
- 
 
  .testimonials .container:first-child {
      /* седьмой блок с отзывами*/
      min-width: 400px;
-     margin: 100px auto 50px
+     margin: 100px auto 56px
  }
  .wrapper_comment p {
      margin: 0px;
+     line-height: 17px;
  }
 
  .testimonials .wrappers {
-     display: block;
-     margin-bottom: 100px;
+    display: block;
+    margin: 0px 171px 0px 171px;
  }
 
  .testimonials .comment {
@@ -548,23 +589,33 @@ body {
      display: flex;
      flex-direction: row;
      justify-content: space-between;
-     margin-bottom: 100px;
+     margin-bottom: 97px;
  }
 
  .container .wrapper_comment {
      background: no-repeat url(../images/background_comment.png);
      padding: 20px 10px 40px 10px;
-     margin-bottom: 5px;
+     margin-bottom: 8px;
      font-size: 14px;
      font-family: "OpenSans", sans-serif;
      color: rgb(134, 135, 139);
      line-height: 1.2;
      font-style: italic
  }
-
- .container .fio {
-     margin: 15px
+ 
+ .container .wrapper_photo {
+ margin-left: 2px;
  }
+ .container .fio p {
+    font-size: 20px;
+    font-family: "OpenSans", sans-serif;
+    color: rgb(51, 51, 51);
+    font-weight: bold;
+    line-height: 1.2;
+    margin: 13px 0 4px 13px;
+    letter-spacing: 1px;
+ }
+
 
  .container .name {
      font-size: 20px;
@@ -576,7 +627,8 @@ body {
  .container .position {
      font-size: 14px;
      color: rgb(134, 135, 139);
-     line-height: 1.2
+     line-height: 1.2;
+     margin-left: 15px;
  }
 
  .custom_section {
@@ -585,13 +637,13 @@ body {
      height: 320px;
  }
 .custom_section .button_download {
-    margin: 30px 0 0;
+    margin: 18px 0 0;
 }
 .custom_section form {
     min-width: 650px;
 }
  .custom_section .container {
-     padding-top: 68px;
+     padding-top: 67px;
      color: white;
      min-width: 650px;
  }
@@ -606,11 +658,12 @@ body {
  }
 
  .custom_section .title_text {
-     font-size: 16px;
+    font-size: 15px;
+    letter-spacing: 0.02em;
  }
 
 .contact .container {
-    margin: 0px 140px 80px 145px;
+    margin: 0px 140px 84px 139px;
     align-items: center;
     margin-top: 100px;
     min-width: 400px;
@@ -630,13 +683,19 @@ body {
      
  }
  .contact_items-name > input {
-     line-height: 34px;
-     width: 100%;
+    line-height: 38px;
+    width: 100%;
+    margin-bottom: 14px;
+    font-size: 12px;
+    padding: 0;
+    padding-left: 14px;
+    padding-top: 6px;
  }
  .contact_items_message p {
     color: rgba(128, 128, 128, 0.534);
     width: 285px;
     font-size: 14px;
+    padding-left: 12px;
  }
 .contact_items_message {
     width: 50%;
@@ -653,9 +712,12 @@ body {
  .contact__btn {
      display: flex;
      justify-content: center;
+     padding-left: 3px;
 }
 .contact .button_download_features {
-    width: 149px;
+    width: 146px;
+    margin-top: 26px;
+    height: 44px;
 }
 .footer .container {
     display: flex;
