--- a/assets/style/style.css
+++ b/assets/style/style.css
@@ -1,6 +1,6 @@
 body {
      margin: 0;
-    
+     width: max-content;
  }
  .header__block_title,
  .price,
@@ -31,10 +31,8 @@ body {
      flex-direction: row;
      background-color: black;
      height: 70px;
-     max-width: 100vw;
+     min-width: 100vw;
      justify-content: space-between;
-     
- 
  }
 
  .navbar__img {
